--- a/apps/web/public/test-preview.html
+++ b/apps/web/public/test-preview.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Preview Test</title>
-    <meta property="og:title" content="Michael V. Mikula - Lead Software Engineer & Salesforce Technical Leader" />
+    <meta property="og:title" content="Your Name - Lead Software Engineer & Salesforce Technical Leader" />
     <meta property="og:description" content="Lead Software Engineer and Salesforce Technical Architect with expertise in full-stack engineering, managed packages, DevOps, and generative AI development." />
     <meta property="og:image" content="http://localhost:3000/previews/linkedin-preview.png" />
     <meta property="og:url" content="http://localhost:3000" />
